# licit-cli

./: .gitignore  .licit.example.yaml  CHANGELOG.md  README.md  SECURITY.md  SEGUIMIENTO-V0.md  SEGUIMIENTO-V1.md  pyproject.toml
docs/: README.md  api-programatica.md  arquitectura.md  buenas-practicas.md  changelog.md  ci-cd.md  compliance.md  conectores.md  configuracion.md  desarrollo.md  ejemplos.md  enterprise.md  faq.md  glosario.md  guia-auditor.md  guia-cli.md  guia-fria.md  inicio-rapido.md  interpretacion-reportes.md  marco-legal.md  migracion-v1.md  modelos.md  provenance.md  seguridad.md
docs/github-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v1.0.0.md
docs/seguimientos/: SEGUIMIENTO-V0.md
src/licit/: __init__.py  __main__.py  cli.py
src/licit/changelog/: __init__.py  differ.py  (+3 more)
tests/: conftest.py  test_cli.py  test_qa_edge_cases.py
tests/test_changelog/: test_classifier.py  test_differ.py  test_integration.py  test_qa_edge_cases.py  test_renderer.py  test_watcher.py
tests/test_config/: test_loader.py  test_schema.py
tests/test_connectors/: test_architect.py  test_qa_edge_cases.py  test_vigil.py
tests/test_core/: test_evidence.py  test_project.py
tests/test_integration/: test_full_flow.py
tests/test_provenance/: test_attestation.py  test_git_analyzer.py  test_heuristics.py  test_qa_edge_cases.py  test_session_reader.py  test_store.py  test_tracker.py
tests/test_reports/: test_gap_analyzer.py  test_html.py  test_json_fmt.py  test_markdown.py  test_qa_edge_cases.py  test_summary.py  test_unified.py
(+65 files in other folders)
